Respect custom filename for Copy/Move/Link To operations

In `copyMoveOrLink`, 9056aa941e0d needed to strip the filename from
`destUrl`. However, this was done before the actual file operation had
been started, resulting in those being performed using the new target
directory, but with the old filename instead of a user-provided new
filename.

This regression can be fixed by moving the stripping after starting the
KIO job, because setting a new `targetUrl` in `contextManager` will only
be needed at a later point, i.e. when persisting this path to the
config.

BUG: 388144
FIXED-IN: 17.12.1

Test Plan: {nav File > Copy To}, enter custom filename, verify image is
copied to new path with new filename. Operations on multiple images
still work, as well as remembering the last used target directory in
both cases.